[tool.poetry]
name = "Pulse Player"
version = "0.1.0"
description = "A one-stop app for music"
authors = ["Advik <advik.b@gmail.com>"]
license = "LGPL"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
